<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral_variant20"
    tools:context=".IntentActivity">

    <Button
        android:id="@+id/btnCam"
        android:layout_width="151dp"
        android:layout_height="53dp"
        android:text="@string/camera"
        android:textSize="24sp"
        app:backgroundTint="@color/material_dynamic_primary50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345" />

    <Button
        android:id="@+id/btnStk"
        android:layout_width="145dp"
        android:layout_height="54dp"
        android:text="@string/stk"
        android:textSize="24sp"
        app:backgroundTint="@color/material_dynamic_primary50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593" />

    <Button
        android:id="@+id/btnCall"
        android:layout_width="155dp"
        android:layout_height="52dp"
        android:text="@string/call"
        android:textSize="24sp"
        app:backgroundTint="@color/material_dynamic_primary50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468" />

    <Button
        android:id="@+id/btnDial"
        android:layout_width="159dp"
        android:layout_height="59dp"
        android:text="@string/dial"
        android:textSize="24sp"
        app:backgroundTint="@color/material_dynamic_primary50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.733" />

    <Button
        android:id="@+id/btnSms"
        android:layout_width="147dp"
        android:layout_height="57dp"
        android:text="@string/sms"
        android:textSize="24sp"
        app:backgroundTint="@color/material_dynamic_primary50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="158dp"
        android:layout_height="56dp"
        android:layout_marginStart="244dp"
        android:layout_marginLeft="244dp"
        android:text="@string/share"
        android:textSize="24sp"
        app:backgroundTint="@color/material_dynamic_primary50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.864" />

    <TextView
        android:id="@+id/txtViewInt"
        android:layout_width="246dp"
        android:layout_height="70dp"
        android:text="@string/intent_page"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

</androidx.constraintlayout.widget.ConstraintLayout>